tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of vehicle
Error: Vehicle cannot be created
Quitting (on error).
